# rookery

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  Makefile  README.md  ROADMAP.md  config.example.toml  install.sh  rookery.service  rookery.service.in
.factory/: init.sh  services.yaml
.factory/skills/dashboard-worker/: SKILL.md
.factory/skills/rust-backend/: SKILL.md
.factory/validation/backend-abstraction/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/backend-abstraction/scrutiny/reviews/: backend-trait-definition.json  config-refactor-profile-subtables.json  daemon-trait-integration.json  fix-config-validation-and-vllm-cmdline.json  fix-daemon-backend-safety.json  fix-swap-drain-cleanup.json  llama-server-backend-impl.json
.factory/validation/backend-abstraction/user-testing/: synthesis.json  synthesis.round1.json
.factory/validation/backend-abstraction/user-testing/flows/: api-sse-cross.json  cfg-a.json  cfg-b.json  rerun-core-evidence.json  trait-a.json  trait-b.json
.factory/validation/test-expansion/scrutiny/: synthesis.json
.factory/validation/user-facing/scrutiny/: synthesis.json
.factory/validation/user-facing/scrutiny/reviews/: cli-backend-display.json  dashboard-backend-badge.json
.factory/validation/vllm-backend/scrutiny/: synthesis.json
.factory/validation/vllm-backend/scrutiny/reviews/: fix-integration-test-port-assertion.json  fix-vllm-scrutiny-issues.json  vllm-backend-lifecycle.json  vllm-capacity-gate-and-cross-backend.json  vllm-compose-generation.json  vllm-integration-tests.json  vllm-log-capture-and-errors.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/rookery-cli/: Cargo.toml
crates/rookery-cli/src/: client.rs  main.rs
crates/rookery-core/: Cargo.toml
crates/rookery-core/src/: config.rs  error.rs  state.rs
crates/rookery-daemon/: Cargo.toml
crates/rookery-daemon/src/: app_state.rs  auth.rs  canary.rs  dashboard.html  main.rs  metrics.rs  routes.rs  sse.rs  test_utils.rs
crates/rookery-dashboard/: Cargo.toml  Trunk.toml  index.html  style.css
crates/rookery-dashboard/src/: api.rs  main.rs
crates/rookery-dashboard/src/components/: agent_panel.rs  agent_summary.rs  agents_tab.rs  bench_panel.rs  chat_panel.rs  gauge.rs  gpu_panel.rs  gpu_viz.rs  log_viewer.rs  mod.rs  model_info.rs  models_panel.rs  profile_switcher.rs  settings_panel.rs  status_card.rs  toast.rs  update_banner.rs
crates/rookery-engine/: Cargo.toml
crates/rookery-engine/src/: agent.rs  backend.rs  compose.rs  gpu.rs  hardware.rs  health.rs  lib.rs  logs.rs  models.rs  process.rs  releases.rs  test_utils.rs
docs/: README.md  agents.md  api.md  architecture.md  cli.md  compatible-agents.md  competitive-landscape.md  configuration.md  dashboard.md  gpu-guide.md  models.md  quickstart.md  test-gap-analysis.md  testing.md  vllm-integration-summary.md
tests/chaos/: kill-agent.sh  kill-server.sh  lib.sh  rapid-swap.sh  run-all.sh  server-agent.sh  sleep-wake.sh
