[package]
name = "rookery-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI client for Rookery inference daemon"
repository = "https://github.com/lance0/rookery"

[[bin]]
name = "rookery"
path = "src/main.rs"

[dependencies]
rookery-core = { path = "../rookery-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
thiserror = { workspace = true }
futures-util = "0.3"
rand = "0.9"
chrono = { workspace = true }
