[package]
name = "rookery-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Config, state machine, and shared types for Rookery"
repository = "https://github.com/lance0/rookery"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = "6"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
