[package]
name = "rookery-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rookeryd"
path = "src/main.rs"

[dependencies]
rookery-core = { path = "../rookery-core" }
rookery-engine = { path = "../rookery-engine" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
