[package]
name = "rookery-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rookeryd"
path = "src/main.rs"

[dependencies]
rookery-core = { path = "../rookery-core" }
rookery-engine = { path = "../rookery-engine" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
nix = { version = "0.29", features = ["signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
include_dir = "0.7"
mime_guess = "2"
