[package]
name = "rookery-dashboard"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Leptos WASM dashboard for Rookery"
repository = "https://github.com/lance0/rookery"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "EventSource",
    "MessageEvent",
    "Event",
    "HtmlElement",
    "Element",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "Document",
    "Storage",
    "Window",
    "KeyboardEvent",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Headers",
    "RequestInit",
    "RequestMode",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "AbortController",
    "AbortSignal",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
