[package]
name = "rookery-engine"
version.workspace = true
edition.workspace = true

[dependencies]
rookery-core = { path = "../rookery-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
nvml-wrapper = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
nix = { version = "0.29", features = ["signal", "process"] }
dirs = "6"
futures-util = "0.3"
toml = "0.8"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
axum = "0.8"
tokio = { workspace = true }
