[package]
name = "rookery-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Process manager, GPU monitor, health checker, and agent manager for Rookery"
repository = "https://github.com/lance0/rookery"

[dependencies]
rookery-core = { path = "../rookery-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
nvml-wrapper = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
nix = { version = "0.31", features = ["signal", "process"] }
dirs = "6"
futures-util = "0.3"
toml = "1.1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
axum = "0.8"
tokio = { workspace = true }
